--- a/MobileApp/DigiFamily/DigiFamily.Android/DigiFamily.Android.csproj
+++ b/MobileApp/DigiFamily/DigiFamily.Android/DigiFamily.Android.csproj
@@ -125,5 +125,8 @@
     <Folder Include="Resources\drawable-xxhdpi\" />
     <Folder Include="Resources\drawable-xxxhdpi\" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\listVewDeleteBtn.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
